# algo-py

./: Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
scripts/: new_problem.py
src/algo/leetcode/: p00001_two_sum.py  p00002_add_two_numbers.py
src/algo_py/leetcode/: 00001_two_num.py  lc_00001_two_num.py
tests/leetcode/: test_lc_00001_two_num.py  test_p00001_two_sum.py  test_p00002_add_two_numbers.py
