[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[project]
name = "algo"
version = "0.1.0"
description = "Learn algorithms with Python"
readme = "README.md"
authors = [
    { name = "Mystic" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
consider_namespace_packages=true # Enable this to allow using the same filename in different test directories without needing __init__.py in each one
pythonpath = ["src", "."]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
